fix: overflow styling

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,13 +1,8 @@
-app-navbar, app-subheader {
-  position: sticky;
-  top: 0;
-}
-
-app-subheader {
-  top: 45px;
-}
-
 .home {
+  top: 95px;
+  height: calc(100vh - 95px);
+  overflow: scroll;
+
   &__ticket {
     margin: 16px;
     padding: 18px;
